--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
+  letter-spacing: 2px;
 }
-body {
+/*body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -16,4 +20,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+}*/
