--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,7 +1,18 @@
 
-:root {
+  :root {
+    --br-color: rgba(0, 0, 0, 0.849);
+    --wt-color: rgb(245, 243, 238);
+    /*
     --br-color: rgb(68, 67, 61);
     --wt-color: rgb(202, 196, 177);
+    */
+  }
+  .home-screen {
+    height: 100vh;
+    width: 100%;
+    text-align: center;
+    background: url('../../images/inflight.jpg') no-repeat bottom center;
+    background-size: cover;
   }
   
   nav {
@@ -50,7 +61,7 @@ nav img {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background-color: #504e4e;
+    background-color: #000000;
     height: 500px;
     width: 400px;
     border-radius: 25px;
@@ -92,13 +103,13 @@ form .input input{
 
 .login button {
     width: 100%;
-    background-color: #3e3ee0;
+    background-color: #d8d5d5;
     
     height: 35px;
     border-radius: 25px;
     
     border: none;
-    color: white;
+    color: var(--br-color);
     
     text-align: center;
     text-decoration: none;
@@ -122,25 +133,34 @@ form .input input{
 }
 
 .page-content {
+    text-align: center;
     min-height: 93vh;
-    background-color: rgb(174, 190, 211);
+    background-color: rgba(224, 223, 223, 0.877);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    margin: auto;
+    width: 100%;
 }
 
 .page-content h1 {
+    margin-top: 25px;
     padding-bottom: 25px;
 }
 
 .page-content .item-div{
-    min-height: 90px;
+  text-align: center;
+    min-height: 70px;
     display: flex;
+    background-color: black;
+    padding: 15px 15px;
+    border-radius: 15px;
+    margin: 10px 0;
     flex-direction: column;
     justify-content: center;
 }
-.page-content .link {
+.page-content .link, .page-content p {
     color: white;
     text-decoration: none;
 }
@@ -171,8 +191,7 @@ form .input input{
 
     .login{
       width: 90%;
-      
-  }
+    }
 
     .nav-links {
       position: absolute;
