--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -8,7 +8,7 @@
     */
   }
   .home-screen {
-    height: 100vh;
+    min-height: 93vh;
     width: 100%;
     text-align: center;
     background: url('../../images/inflight.jpg') no-repeat bottom center;
@@ -51,7 +51,7 @@
 
 nav img {
     width: 40px;
-    height: auto;
+    height: auto; 
     cursor: pointer;
 }
 
@@ -177,18 +177,24 @@ form .input input{
     margin: 4px;
   }
   
-  @media screen and (max-width: 1024px) {
+  @media screen and (max-width: 1367px) {
     .nav-links {
       width: 75%;
     }
   }
-  
+  @media screen and (max-width: 768px) and (max-height: 600px){
+    nav img {
+      width: 34px;
+      
+    } 
+  }
   @media screen and (max-width: 768px) {
     nav {
       display: flex;
+      height: 7vh;
       justify-content: space-around;
     }
-
+    
     .login{
       width: 90%;
     }
@@ -222,6 +228,7 @@ form .input input{
       width: 30%;
     }
   }
+
   
   .nav-active {
     transform: translateX(0%);
